--- a/config/zuul-dev.yml
+++ b/config/zuul-dev.yml
@@ -1,6 +1,15 @@
 spring:
   application:
     name: zuul
+  rabbitmq:
+    host: 192.168.64.140
+    port: 5672
+    username: admin
+    password: admin
+  cloud:
+    config:
+      override-none: true
+    
     
 server:
   port: 3001
